# wordle_shredder

./: Cargo.toml  README.md  links.txt
src/: main.rs
src/archive/: mod.rs  w103.rs  w227.rs  wxxx.rs
src/list/: letter.rs  list.rs  mod.rs
src/ui/: design.rs  letter_state.rs  mod.rs  n.rs  state.rs
