[package]
name = "wordle_shredder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
iced = "*"
# TODO: figure out wasm??? (https://docs.rs/iced_web/latest/iced_web/)

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
