[package]
name = "wordle_shredder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true

[dependencies]
rayon = "1.5"
iced = "0.4"
# TODO: figure out wasm??? (https://docs.rs/iced_web/latest/iced_web/)